fix overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,5 +5,5 @@
 body {
 	// Gradient
 	@apply bg-gradient-to-t from-green-900/10 to-blue-800/10 bg-no-repeat bg-black
-	text-white;
+	text-white overflow-x-hidden;
 }
